--- a/src/Bundle/WebBundle/Resources/views/Backend/Drug/groupForm.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Drug/groupForm.html.twig
@@ -8,11 +8,14 @@
 {{ form_widget(form._token) }}
 <div class="row">
     <div class="col-md-6">
-        {{ form_row(form.presentation) }}
+        {% if form.vars.value.id is null %}
+            {{ form_row(form.presentation, { widget_addon_append: { icon: 'remove'}}) }}
+        {% else %}
+            {{ form_row(form.presentation) }}
+        {% endif %}
         {{ form_row(form.name) }}
     </div>
     <div class="col-md-6">
         {{ form_row(form.drugs) }}
     </div>
 </div>
-
