--- a/src/Bundle/WebBundle/Resources/views/Backend/Drug/groupCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Drug/groupCreate.html.twig
@@ -27,15 +27,38 @@
 
 {% block page_javascripts %}
     <script type="text/javascript">
+
         var former = Accard.get("form");
         var manager = new former($('form'));
         manager
+            {% if form.vars.value.id is null -%}
             .behavior('presentation', {
                 target: 'name',
                 condition: 'changed',
                 action: 'slug',
                 event: 'keyup'
             })
+            {% endif -%}
             .bindAll();
+
+        {% if form.vars.value.id is null -%}
+
+        // Enable or disable automatic slugging...
+        !(function($) {
+            var presentation = $('[id$="presentation"]:first');
+            var name         = $('[id$="name"]:first');
+            var button       = presentation.next();
+
+            if (button.is('span')) {
+                button.on('click', function() {
+                    presentation.off('keyup');
+                    button.remove();
+                    presentation.parent().removeClass('input-group');
+                    name.prop('readonly', false);
+                })
+            }
+        })(jQuery);
+
+        {% endif %}
     </script>
 {% endblock %}
