--- a/src/Bundle/WebBundle/Resources/views/Backend/Drug/groupUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Drug/groupUpdate.html.twig
@@ -10,8 +10,10 @@
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import update %}
 
 {% block content %}
-    {{ page_title('accard.drug_group.action.update'|trans) }}
-
+    {% block page_title %}
+        {{ page_title('accard.drug_group.action.update'|trans) }}
+    {% endblock %}
+    {% block drug_drug_group_form %}
     {{ form_errors(form) }}
 
     <form action="{{ path('accard_backend_drug_group_update', { id: drug_group.id }) }}" method="post" {{ form_enctype(form) }}>
@@ -22,5 +24,5 @@
             </div>
         </div>
     </form>
-
+    {% endblock %}
 {% endblock %}
