--- a/src/Bundle/WebBundle/Resources/views/Backend/Drug/drugForm.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Drug/drugForm.html.twig
@@ -5,6 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
+{% block drug_form %}
 {{ form_widget(form._token) }}
 <div class="row">
     <div class="col-md-6">
@@ -22,3 +23,4 @@
         {% endif %}
     </div>
 </div>
+{% endblock %}
