--- a/src/Bundle/WebBundle/Resources/views/Backend/Drug/drugCreate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Drug/drugCreate.html.twig
@@ -1,4 +1,4 @@
-Yup{# This file is part of the Accard package. #}
+{# This file is part of the Accard package. #}
 
 {# (c) University of Pennsylvania #}
 
